--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,6 @@
   "printWidth": 80,
   "useTabs": false,
   "tabWidth": 2,
-  "singleQuote": false,
+  "singleQuote": true,
   "arrowParens": "avoid"
 }
