--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "natours",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node app for a tourism website",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
-  "keywords": [],
+  "keywords": ["Node.js", "Express", "MongoDB", "SSR"],
   "author": "Joe",
   "license": "ISC",
   "dependencies": {
