--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "scripts": {
     "start": "nodemon server.js"
   },
-  "keywords": ["Node.js", "Express", "MongoDB", "SSR"],
+  "keywords": [
+    "Node.js",
+    "Express",
+    "MongoDB",
+    "SSR"
+  ],
   "author": "Joe",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
   }
