--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 PORT=3001
-USER=joe
-PASSWORD=123456
+DATABASE=mongodb+srv://crmuser:<PASSWORD>@cluster0-x58f7.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE_PASSWORD=1234
