--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
@@ -29,5 +30,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "prettier": "^2.1.1"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
