--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
-    "slugify": "^1.4.5"
+    "slugify": "^1.4.5",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
