Updating package.json for deployment

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node app for a tourism website",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
@@ -53,8 +53,5 @@
     "eslint-plugin-react": "^7.20.6",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.1"
-  },
-  "engines": {
-    "node": ">=12.0.0"
   }
 }
