--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "eslint-plugin-react": "^7.20.6",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.1"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
